--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -31,11 +31,11 @@
   ],
   "content_scripts": [
     {
+      "matches": ["*://*/*"],
+      "all_frames": true,
+      "run_at": "document_end",
       "js": ["content.js"],
-      "matches": [
-        "http://*/*",
-        "https://*/*"
-      ]
+      "css": ["css/labels.css"]
     }
   ],
   "commands": {
