Cleanup of CSS for overlays

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -35,7 +35,7 @@
       "all_frames": true,
       "run_at": "document_idle",
       "js": ["js/content.js"],
-      "css": ["css/labels.css"]
+      "css": ["css/overlays.css"]
     }
   ],
   "commands": {
