Changes to message handling between popup and content scripts

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -23,7 +23,8 @@
     "scripting",
     "tabs",
     "activeTab",
-    "storage"
+    "storage",
+    "management"
   ],
   "host_permissions": [
     "*://*/*"
